--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["src/lib/SocialPick.astro"]
 }
